 * added 2D projection of 3D models
 * added toolpath cropping 
 * added support for DXF features "LWPOLYLINE" and "ARC"
 * added a configuration setting for automatically loading a custom task settings file on startup
 * added a simple "undo" feature for reversing model manipulations
 * added a minimum step width for GCode positions to be written
 * enabled drag'n'drop for loading models
 * support non-local file handling (e.g. http, ...)
 * the scroll wheel now behaves similarly to Inkscape's interface (pan and zoom)
 * the default filename extension for exported GCode files is now configurable
 * unify DropCutter behaviour for models that are higher than the defined bounding box
  * always move up to safety height in this case
 * optional visualization of toolpath direction
 * visibility of 3D view items is now configurable in the 3D window
  * via a button and via the context menu
 * improved stability of remote processing: disconnected nodes should not cause problems anymore
 * automatically distributed support bridges can now be placed at corners or edges

Version 0.4.0.1 - 2010-10-24
 * disabled parallel processing for Windows standalone executable
   (a real fix will follow later)

Version 0.4 - 2010-10-19
 * use all available CPU cores for parallel processing
  * this requires at least Python 2.6 or the "python-multiprocessing" package
 * a standalone windows executable is available (experimental)
 * added an improved contour toolpath strategy (ContourFollow)
  * see http://fab.senselab.org/node/43
 * added options for conventional/climb milling
 * added automatic support grid distribution for contour models
 * allow to reverse the direction of a 2D contour model
 * beautification of the process name (via python-setproctitle)
 * added experimental cluster processing (server mode)
 * added G61/64 GCode settings for path precision
 * Usability:
  * added optional "orthogonal" view (instead of perspective)
  * added a "recent files" item to the file menu