@@ -21,6 +21,5 @@ You should have received a copy of the GNU General Public License
 along with PyCAM.  If not, see <http://www.gnu.org/licenses/>.
 """
 
-__all__ = [ "SimpleGCodeExporter", "SVGExporter", "STLExporter",
-        "EMCToolExporter"]
+__all__ = [ "GCodeExporter", "SVGExporter", "STLExporter", "EMCToolExporter"]
 
